Fix small typo.